add new aria labels to enable voice over assistant

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1313,7 +1313,7 @@ img.done-icon {
 }
 
 .category-container .subcategories-container {
-    display: flex;
+    display: none;
     flex-direction: row;
     flex-wrap: wrap;
     max-height: 0;
@@ -1322,6 +1322,7 @@ img.done-icon {
 }
 
 .category-container .subcategories-container.expand {
+	display: flex;
     max-height: none;
     transition: max-height 0.2s ease-out;
 }
