--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -27,7 +27,7 @@
         <div id="emptyContainer"  class="padded" ng-if="!loadingData && !WidgetHome.items.length">
             <div ng-if="WidgetHome.media.data.content.enableFiltering" style="position: absolute;right:2em; top: 2em; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
         <div class="padded padding-top-zero text-overlay">
             <div ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0" style="float: right; padding: 10px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -47,10 +47,10 @@
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
                             <div play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}" class="list-media-holder text-overlay">
                                 <div class="li-actions-item">
-                                    <i id="drawericon" style="right: 0;" class="glyphicon glyphicon-option-horizontal" ng-click="WidgetHome.showDrawer($event, item)" role="button"></i>
+                                    <i id="drawericon" style="right: 0;" class="glyphicon glyphicon-option-horizontal" ng-click="WidgetHome.showDrawer($event, item)" role="button" aria-label="{{item.data.title}} media item options"></i>
                                 </div>
-                                <img ng-if="item.data.topImage" load-image="16x9" crop-width="240" crop-height="135" crop-type="crop" data-final-src="{{item.data.topImage}}">
-                                <img ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png" style="max-width:100%">
+                                <img alt="{{item.data.title}}" ng-if="item.data.topImage" load-image="16x9" crop-width="240" crop-height="135" crop-type="crop" data-final-src="{{item.data.topImage}}">
+                                <img alt="{{item.data.title}}" aria-hidden="true" ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png" style="max-width:100%">
                             </div>
                         </div>
                         <div class="list-item-copy text-left">
