--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -29,7 +29,7 @@
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items" ng-if="showFeed"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
             ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0">
             <div style="padding: 20px; padding-right: 30px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items" ng-if="showFeed"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                             <i class="share glyphicon glyphicon-share-alt" style="color: white !important;" ng-if="allowShare" ng-click="WidgetHome.share($event, item)" role="button"></i>
                         </div> -->
                         <img alt="{{item.data.title}}" ng-if="item.data.topImage" load-image="16x9" crop-width="110" crop-height="60"
-                            crop-type="crop" data-final-src="{{item.data.topImage}}">
+                            crop-type="crop" aria-hidden="true" data-final-src="{{item.data.topImage}}" tabindex="0">
                         <img alt="{{item.data.title}}" aria-hidden="true" ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png">
                     </div>
 
@@ -77,7 +77,7 @@
                                     <div></div>
                                 </div>
                                 <i style="float: right; display: inline;" class="glyphicon glyphicon-option-horizontal"
-                                    ng-click="WidgetHome.showDrawer($event, item)" role="button" aria-label="{{item.data.title}} media item options"></i>
+                                    ng-click="WidgetHome.showDrawer($event, item)" role="button" aria-label="{{item.data.title}} media item options" tabindex="0"></i>
                             </div>
 
                         </div>
