--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -27,7 +27,7 @@
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items" ng-if="showFeed"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
             ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0">
             <div style="padding: 20px; padding-right: 30px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items" ng-if="showFeed"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -48,8 +48,8 @@
                     <div class="text-overlay"
                         play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}">
                         <img alt="{{item.data.title}}" ng-if="item.data.topImage" load-image="16x9" style="width:100%;" crop-width="340"
-                            crop-height="190" crop-type="crop"
-                            data-final-src="{{item.data.topImage}}">
+                            crop-height="190" crop-type="crop" aria-hidden="true"
+                            data-final-src="{{item.data.topImage}}" tabindex="0">
                         <img alt="{{item.data.title}}" aria-hidden="true" ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png"
                             style="width:100%;">
                     </div>
@@ -78,7 +78,7 @@
                             <i class="glyphicon bookmark star" ng-class="{ 'glyphicon-star-empty' : !item.data.bookmarked, 'glyphicon-star' : item.data.bookmarked }" ng-click="WidgetHome.bookmark($event, item)" role="button"></i>
                             <i ng-if="globalPlaylist" class="glyphicon star" style="font-size: 17px;top: 1px; margin-left: 20px;" ng-class="{ 'glyphicon-plus' : !isInGlobalPlaylist(item.id), 'glyphicon-minus' : isInGlobalPlaylist(item.id) }" ng-click="toggleGlobalPlaylistItem($event, item)" role="button"></i> -->
                                 <i class="glyphicon glyphicon-option-horizontal" aria-label="{{item.data.title}} media item options"
-                                    ng-click="WidgetHome.showDrawer($event, item)" role="button"></i>
+                                    ng-click="WidgetHome.showDrawer($event, item)" role="button" tabindex="0"></i>
                             </div>
 
                         </div>
