--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -35,7 +35,7 @@
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items" ng-if="showFeed"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0">
             <div style="padding: 20px; padding-right: 30px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
-                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items"></i>
+                    <i class="glyphicon glyphicon-filter filter-funnel" role="button" aria-label="Filter items" ng-if="showFeed"></i>
                     <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
                 </div>
             </div>
@@ -57,14 +57,14 @@
                             <div class="li-actions-item">
                                 <i class="glyphicon glyphicon-option-horizontal" style="right: 0;"
                                     ng-click="WidgetHome.showDrawer($event, WidgetHome.items[$index])"
-                                    role="button" aria-label="{{WidgetHome.items[$index].data.title}} media item options"></i>
+                                    role="button" aria-label="{{WidgetHome.items[$index].data.title}} media item options" tabindex="0"></i>
                             </div>
                             <div class="list-media-holder text-overlay"
                                 play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0 || WidgetHome.items[$index].data.audioUrl.length > 0 }}">
                                 <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1" crop-width="200"
                                     crop-height="200" crop-type="crop" alt="{{WidgetHome.items[$index].data.title}}"
                                     data-final-src="{{WidgetHome.items[$index].data.topImage}}"
-                                    style="width: 200px;">
+                                    style="width: 200px;" tabindex="0" aria-hidden="true">
                                 <img ng-if="!WidgetHome.items[$index].data.topImage"
                                     src="../../../styles/media/holder-1x1.png" alt="{{WidgetHome.items[$index].data.title}}" aria-hidden="true">
                             </div>
@@ -114,17 +114,17 @@
                             <div class="li-actions-item">
                                 <i style="right: 0;" class="glyphicon glyphicon-option-horizontal"
                                     ng-click="WidgetHome.showDrawer($event, WidgetHome.items[$index + 1])"
-                                    role="button" aria-label="{{WidgetHome.items[$index+1].data.title}} media item options"></i>
+                                    role="button" aria-label="{{WidgetHome.items[$index+1].data.title}} media item options" tabindex="0"></i>
 
                             </div>
                             <div class="list-media-holder text-overlay"
                                 play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0 || WidgetHome.items[$index+1].data.audioUrl.length > 0 }}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage" load-image="1x1"
-                                    crop-width="200" crop-height="200" crop-type="crop"
+                                    crop-width="200" crop-height="200" crop-type="crop" aria-hidden="true"
                                     data-final-src="{{WidgetHome.items[$index + 1].data.topImage}}"
-                                    style="width: 200px;">
+                                    style="width: 200px;" tabindex="0" alt="{{WidgetHome.items[$index + 1].data.title}}">
                                 <img ng-if="!WidgetHome.items[$index + 1].data.topImage"
-                                    src="../../../styles/media/holder-1x1.png">
+                                    src="../../../styles/media/holder-1x1.png" aria-hidden="true">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
