refactor voiceover click action

--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -40,8 +40,7 @@
                 </div>
             </div>
             <div class="list-layout">
-                <div class="row layout-1"
-                        >
+                <div class="row layout-1 widget-home-items-container">
                     <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.items track by $index"
                          ng-click="WidgetHome.goToMedia($index)" class="list-item-odd">
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
