--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="widget-home-items-container">
             <div class="clickable text-overlay" ng-repeat="item in WidgetHome.items track by $index"
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="plugin-banner clearfix text-overlay">
