--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -463,6 +463,10 @@
     cursor: pointer;
 }
 
+.widget-home-items-container:has(.clickable:focus-within) .clickable:not(:focus-within) {
+    pointer-events: none;
+}
+
 .audio-temporary-fix {
     height: 50px;
 }
