--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="list-layout" id="listLayout2">
+        <div class="list-layout widget-home-items-container" id="listLayout2">
             <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.items track by $index"
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="list-item-media text-left overflow-hidden">
