--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -9,7 +9,7 @@
                     <img ng-if="!WidgetMedia.fullScreen"
                         ng-hide="WidgetMedia.showVideo || !WidgetMedia.item.data.topImage || ( skipMediaPage && WidgetMedia.item.data.videoUrl )"
                         load-image="16x9" style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
-                        crop-width="1280" crop-height="720" crop-type="crop"
+                        crop-width="1280" crop-height="720" crop-type="crop" title="{{WidgetMedia.item.data.title}} top image" aria-label="{{WidgetMedia.item.data.title}} top image"
                         data-final-src="{{WidgetMedia.item.data.topImage }}" alt="{{WidgetMedia.item.data.title}} top image"/>
                         <img ng-if="!WidgetMedia.item.data.topImage && !WidgetMedia.showVideo" aria-hidden="true" src="../../../styles/media/holder-16x9.png" style="width:100%;">
                     <div id="myVideo" ng-include="'templates/layouts/video-player.html'"></div>
@@ -22,8 +22,8 @@
                 <p data-ng-if="WidgetMedia.item.data.hasDownloadedVideo" class="margin-bottom-zero word-break">Downloaded</p>
                 <p class="margin-bottom-zero word-break">{{WidgetMedia.item.data.summary}}</p>
 
-                <p id="viewsg" ng-if="showViewCount" class="ellipsis margin-zero">{{WidgetMedia.count ? WidgetMedia.count : 0}}
-                    <span  style="float: left;margin-right: 5px;">
+                <p id="viewsg" ng-if="showViewCount" class="ellipsis margin-zero" role="text" tabindex="0" aria-label="{{WidgetMedia.item.data.title}} view count {{WidgetMedia.count ? WidgetMedia.count : 0}}">{{WidgetMedia.count ? WidgetMedia.count : 0}}
+                    <span  style="float: left;margin-right: 5px;" aria-hidden="true">
                         <i id="iconViewg" class="glyphicon glyphicon-eye-open"></i>
                     </span>
                 </p>
