--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -44,12 +44,14 @@
                     <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.items track by $index"
                          ng-click="WidgetHome.goToMedia($index)" class="list-item-odd">
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
-                            <div play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}" class="list-media-holder text-overlay">
+                            <div class="list-media-holder text-overlay">
                                 <div class="li-actions-item">
                                     <i id="drawericon" tabindex="0" style="right: 0;" class="glyphicon glyphicon-option-horizontal" ng-click="WidgetHome.showDrawer($event, item)" role="button" aria-label="{{item.data.title}} media item options"></i>
                                 </div>
-                                <img tabindex="0" alt="{{item.data.title}}" aria-hidden="true" ng-if="item.data.topImage" load-image="16x9" crop-width="240" crop-height="135" crop-type="crop" data-final-src="{{item.data.topImage}}">
-                                <img tabindex="0" alt="{{item.data.title}}" aria-hidden="true" ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png" style="max-width:100%">
+                                <div play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}" aria-hidden="true">
+                                    <img tabindex="0" alt="{{item.data.title}}" aria-hidden="true" ng-if="item.data.topImage" load-image="16x9" crop-width="240" crop-height="135" crop-type="crop" data-final-src="{{item.data.topImage}}">
+                                    <img tabindex="0" alt="{{item.data.title}}" aria-hidden="true" ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png" style="max-width:100%">
+                                </div>
                             </div>
                         </div>
                         <div class="list-item-copy text-left">
@@ -63,8 +65,8 @@
 
                             <p data-ng-if="item.data.summary" id="summary" class="ellipsis margin-zero">{{item.data.summary}}</p>
 
-                            <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}}
-                                <span id="iconView" style="float: left;margin-right: 5px;">
+                            <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero" role="text" tabindex="0" aria-label="{{item.data.title}} view count {{item.data.count ? item.data.count : 0}}">{{item.data.count ? item.data.count : 0}}
+                                <span id="iconView" style="float: left;margin-right: 5px;" aria-hidden="true">
                                     <i class="glyphicon glyphicon-eye-open"></i>
                                 </span>
                             </p>
