--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -47,7 +47,7 @@
             <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.items track by $index"
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="list-item-media text-left overflow-hidden">
-                    <div class="list-media-holder pull-left text-overlay"
+                    <div class="list-media-holder pull-left text-overlay" aria-hidden="true"
                         play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}">
                         <!-- <div class="li-actions-item">
                             <i class="share glyphicon glyphicon-share-alt" style="color: white !important;" ng-if="allowShare" ng-click="WidgetHome.share($event, item)" role="button"></i>
@@ -86,9 +86,9 @@
 
                         <p data-ng-if="item.data.summary" id="summary" class="summary ellipsis margin-zero">{{item.data.summary}}</p>
                         <p id="views" ng-if="WidgetHome.media.data.content.showViewCount"
-                        ng-class="{'no-summary': !item.data.summary}"
+                        ng-class="{'no-summary': !item.data.summary}" role="text" tabindex="0" aria-label="{{item.data.title}} view count {{item.data.count ? item.data.count : 0}}"
                         class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}}
-                            <span id="iconView" style="float: left;margin-right: 5px;">
+                            <span id="iconView" style="float: left;margin-right: 5px;" aria-hidden="true">
                                 <i class="glyphicon glyphicon-eye-open"></i>
                             </span>
                         </p>
