--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -45,7 +45,7 @@
             <div class="clickable text-overlay" ng-repeat="item in WidgetHome.items track by $index"
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="plugin-banner clearfix text-overlay">
-                    <div class="text-overlay"
+                    <div class="text-overlay" aria-hidden="true"
                         play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}">
                         <img alt="{{item.data.title}}" ng-if="item.data.topImage" load-image="16x9" style="width:100%;" crop-width="340"
                             crop-height="190" crop-type="crop" aria-hidden="true"
@@ -86,8 +86,8 @@
                     <div data-ng-if="item.data.summary" class="summary">
                         <p class="margin-bottom-zero" id="summary">{{item.data.summary}}</p>
                     </div>
-                    <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}}
-                        <span id="iconView" style="float: left;margin-right: 5px;">
+                    <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero" role="text" tabindex="0" aria-label="{{item.data.title}} view count {{item.data.count ? item.data.count : 0}}">{{item.data.count ? item.data.count : 0}}
+                        <span id="iconView" style="float: left;margin-right: 5px;" aria-hidden="true">
                             <i class="glyphicon glyphicon-eye-open"></i>
                         </span>
                     </p>
