--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1576,3 +1576,17 @@ input[type="checkbox"]:checked+.subcategory-label.minus::before {
         height: 32px !important;
     }
 }
+
+.list-media-holder {
+    position: relative !important;
+}
+
+.image-placeholder {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: #f0f0f0;
+}
