--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -223,7 +223,7 @@
     justify-content: flex-start;
     align-items: center;
 }
-#listLayout2 .list-item-media .list-media-holder img{
+#listLayout2 .list-item-media .list-media-holder img, #listLayout2 .image-placeholder {
     width: 107px !important;
     height: 66px !important;
     max-width: 107px !important;
@@ -1579,14 +1579,23 @@ input[type="checkbox"]:checked+.subcategory-label.minus::before {
 
 .list-media-holder {
     position: relative !important;
+    width: 100%;
+    overflow: hidden;
 }
 
 .image-placeholder {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    background-color: #f0f0f0;
+    display: block;
+    border-radius: inherit;
+    margin: 0 auto;
+    background-color: #efefef;
+    animation-color:#e0e0e0;
+}
+
+.load-image-hidden {
+    opacity: 0;
+}
+
+.load-image-visible {
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
 }
